--- a/juego_01.html
+++ b/juego_01.html
@@ -65,7 +65,7 @@ function auWin() {
 	}
 	else if (android > -1) {
 		//alert('android 16');
-		audioElement.setAttribute('src', 'audio/win.ogg');
+		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/win.ogg');
