--- a/juego_01.html
+++ b/juego_01.html
@@ -64,11 +64,11 @@ function auWin() {
 		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
 	else if (android > -1) {
-		//alert('android 16');
+		alert('android 16');
 		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
 	else {
-		audioElement.setAttribute('src', 'audio/win.ogg');
+		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
 	//fin iOS y Safari no reconocen .ogg
 	
