--- a/juego_01.html
+++ b/juego_01.html
@@ -99,7 +99,7 @@ function aubtn() {
 		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
 	}
 	//else if (android > -1) {
-	else if (is_android > -1) {
+	else if (is_android) {
 		//alert('android 16');
 		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
 	}
@@ -131,7 +131,7 @@ function aubtnNo(){
 		audioElement.setAttribute('src', 'audio/tap_noOk.mp3');
 	}
 	//else if (android > -1) {
-	else if (is_android > -1) {
+	else if (is_android) {
 		//alert('android 16');
 		audioElement.setAttribute('src', 'audio/tap_noOk.ogg');
 	}
