--- a/juego_01.html
+++ b/juego_01.html
@@ -70,7 +70,7 @@ function auWin() {
 		//alert('ipad');
 		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
-	else if (android > -1) {
+	else if (is_android) {
 		//alert('android 16');
 		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
@@ -104,7 +104,7 @@ function aubtn() {
 	//else if (android > -1) {
 	else if (is_android) {
 		//alert('android 16');
-		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
+		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
@@ -136,7 +136,7 @@ function aubtnNo(){
 	//else if (android > -1) {
 	else if (is_android) {
 		//alert('android 16');
-		audioElement.setAttribute('src', 'audio/tap_noOk.ogg');
+		audioElement.setAttribute('src', 'audio/tap_noOk.mp3');
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/tap_noOk.ogg');
