--- a/cuento.html
+++ b/cuento.html
@@ -49,7 +49,7 @@ var android 	   = navigator.userAgent.toLowerCase().indexOf("android");
 
 <script language="javascript" type="text/javascript">
 
-function aubtn() {
+/*function aubtn() {
 	var audioElement = document.createElement('audio');
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
@@ -81,30 +81,528 @@ function aubtn() {
 	//fin iOS y Safari no reconocen .ogg
 	
 	audioElement.play();
-}
+}*/
+
+/*audioElement.setAttribute('autoplay', 'autoplay');
+$.get();*/
+
+var audioElement = document.createElement('audio');
 
 function playAudio() {
-	//ogg no funciona para Safari
-	if (navigator.userAgent.indexOf("Safari")!=-1) {
-		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
-	} else {
-		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
-	}
-	
-	audioElement.setAttribute('autoplay', 'autoplay');
-	$.get();
-	audioElement.addEventListener("load", function() {
-		audioElement.play();
-	}, true);
-	audioElement.play();
 	
 	$("#playbtn").fadeOut(100);
 	$("#pausebtn").fadeIn(300);
+	
+	//ogg no funciona para Safari
+	/*if (navigator.userAgent.indexOf("Safari")!=-1) {
+		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
+	} else {
+		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
+	}*/
+	
+	audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();
+	
+	switch(cuento) {//selecciona css
+		
+		case '01'://principe feliz
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '02'://la bella y la bestia
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '03'://pulgarcito
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '04'://el abuelo y el nieto
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '05'://el gigante egoista
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '06'://la flor mas bonita
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_fas/.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		//cuentos ninos
+		case '07'://La union
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_UNION.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '08'://La aventura de la perrita Luna
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_AVENTURA_DE_LA_PERRITA_LUNA.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '09'://La princesa triste
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_PRINCESA_TRISTE.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '10'://El colibrí y la libertad
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/EL_COLIBRI_Y_LA_LIBERTAD.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '11'://pueblo Paz y el pueblo Sucio
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/PUEBLO_PAZ_Y_PUEBLO_SUCIO.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '12'://Los títeres y el carpintero
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LOS_TITERES_Y_EL_CARPINTERO.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '13'://La flor
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_FLOR.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '14'://La disciplina nos hace felices
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/LA_DISIPLINA_NOS_HACE_FELICES.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '15'://Un paseo al campo
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/UN_PASEO_AL_CAMPO.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+		case '16'://No dejaré mi sueño
+			
+			//iOS y Safari no reconocen .ogg
+			if(isiPhone > -1) {
+				//alert('iphone 22');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3');
+			}
+			else if(isiPod > -1) {
+				//alert('ipod');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3');
+			}
+			else if(isiPad > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3');
+			}
+			else if(isSafari > -1) {
+				//alert('ipad');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.mp3');
+			}
+			else if (android > -1) {
+				//alert('android 16');
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
+			}
+			else {
+				audioElement.setAttribute('src', 'audio/cuentos_ninos/NO_DEJARE_MI_SUENO.ogg');
+			}
+			//fin iOS y Safari no reconocen .ogg
+			
+		break;
+		
+	}//fin switch
+	
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();
+	audioElement.addEventListener("load", function() {
+		audioElement.play();
+	}, true);*/
+	audioElement.play();
+	
+	//$("#playbtn").fadeOut(100);
+	//$("#pausebtn").fadeIn(300);
 }
 function pauseAudio() {
-	audioElement.pause();
 	$("#playbtn").fadeIn(100);
 	$("#pausebtn").fadeOut(300);
+	
+	audioElement.pause();
 }
 
 function frasesIn() {
