--- a/juego_01.html
+++ b/juego_01.html
@@ -46,8 +46,8 @@ var audioElement = document.createElement('audio');
 $.get();*/
 
 function auWin() {
-	audioElement.setAttribute('autoplay', 'autoplay');
-	$.get();
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
 	if(isiPhone > -1) {
@@ -75,12 +75,14 @@ function auWin() {
 	}
 	//fin iOS y Safari no reconocen .ogg
 	
+	audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();
 	audioElement.play();
 }
 
 function aubtn() {
-	audioElement.setAttribute('autoplay', 'autoplay');
-	$.get();
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
 	if(isiPhone > -1) {
@@ -108,12 +110,14 @@ function aubtn() {
 	}
 	//fin iOS y Safari no reconocen .ogg
 	
+	audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();
 	audioElement.play();
 }
 
 function aubtnNo(){
-	audioElement.setAttribute('autoplay', 'autoplay');
-	$.get();
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
 	if(isiPhone > -1) {
@@ -141,6 +145,8 @@ function aubtnNo(){
 	}
 	//fin iOS y Safari no reconocen .ogg
 	
+	audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();
 	audioElement.play();
 }
 
