--- a/juego_01.html
+++ b/juego_01.html
@@ -50,7 +50,7 @@ function auWin() {
 	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
-	if(isiPhone > -1) {
+	/*if(isiPhone > -1) {
 		//alert('iphone 22');
 		audioElement.setAttribute('src', 'audio/win.mp3');
 	}
@@ -72,8 +72,10 @@ function auWin() {
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/win.ogg');
-	}
+	}*/
 	//fin iOS y Safari no reconocen .ogg
+	
+	audioElement.setAttribute('src', 'audio/win.ogg');
 	
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
@@ -85,7 +87,7 @@ function aubtn() {
 	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
-	if(isiPhone > -1) {
+	/*if(isiPhone > -1) {
 		//alert('iphone 22');
 		audioElement.setAttribute('src', 'audio/tap_ok.mp3');
 	}
@@ -107,8 +109,10 @@ function aubtn() {
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/tap_ok.ogg');
-	}
+	}*/
 	//fin iOS y Safari no reconocen .ogg
+	
+	audioElement.setAttribute('src', 'audio/tap_ok.ogg');
 	
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
@@ -120,7 +124,7 @@ function aubtnNo(){
 	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
-	if(isiPhone > -1) {
+	/*if(isiPhone > -1) {
 		//alert('iphone 22');
 		audioElement.setAttribute('src', 'audio/tap_noOk.mp3');
 	}
@@ -142,8 +146,10 @@ function aubtnNo(){
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/tap_noOk.ogg');
-	}
+	}*/
 	//fin iOS y Safari no reconocen .ogg
+	
+	audioElement.setAttribute('src', 'audio/tap_noOk.ogg');
 	
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
