--- a/juego_01.html
+++ b/juego_01.html
@@ -81,10 +81,13 @@ function auWin() {
 	}*/
 	//fin iOS y Safari no reconocen .ogg
 	
-	audioElement.setAttribute('src', 'audio/win.mp3');
-	
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
+	
+	audioElement.setAttribute('src', 'audio/win.mp3');
+	
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();*/
 	audioElement.play();
 }
 
@@ -118,10 +121,13 @@ function aubtn() {
 	}*/
 	//fin iOS y Safari no reconocen .ogg
 	
-	audioElement.setAttribute('src', 'audio/tap_ok.mp3');
-	
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
+	
+	audioElement.setAttribute('src', 'audio/tap_ok.mp3');
+	
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();*/
 	audioElement.play();
 }
 
@@ -155,10 +161,14 @@ function aubtnNo(){
 	}*/
 	//fin iOS y Safari no reconocen .ogg
 	
-	audioElement.setAttribute('src', 'audio/tap_noOk.mp3');
-	
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
+	
+	audioElement.setAttribute('src', 'audio/tap_noOk.mp3');
+	
+	/*audioElement.setAttribute('autoplay', 'autoplay');
+	$.get();*/
+	
 	audioElement.play();
 }
 
