--- a/juego_01.html
+++ b/juego_01.html
@@ -349,7 +349,7 @@ $(document).ready(function() {
 		//$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no">');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no">');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi, user-scalable=no">');
-		$("head").append('<meta name="viewport" content="target-densitydpi=device-dpi, user-scalable=no">');
+		$("head").append('<meta name="viewport" content="width=960px, target-densitydpi=device-dpi, user-scalable=no">');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 	}
 	else {
