--- a/juego_01.html
+++ b/juego_01.html
@@ -342,7 +342,7 @@ $(document).ready(function() {
 		window.scrollTo(0, 0);//hide url bar mobiles //no funciona al 100% en android
 	}
 	else if (android > -1) {
-		alert('android 20');
+		alert('android 21');
 		
 		if (window.devicePixelRatio == 1.5) {
 			alert("This is a high-density screen");
@@ -357,7 +357,7 @@ $(document).ready(function() {
 		//$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no">');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no">');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi, user-scalable=no">');
-		$("head").append('<meta name="viewport" content="width=960px, target-densitydpi=device-dpi">');
+		$("head").append('<meta name="viewport" content="width=960, target-densitydpi=device-dpi">');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 	}
 	else {
