--- a/juego_01.html
+++ b/juego_01.html
@@ -5,6 +5,9 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+<meta name="viewport" content="width=960, target-densitydpi=device-dpi">
+
 <meta name="author" content="David Herrera Cordero | Libros para Todos GN" />
 
 <script language="javascript" type="text/javascript">
@@ -357,7 +360,7 @@ $(document).ready(function() {
 		//$("head").append('<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no">');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no">');
 		//$("head").append('<meta name="viewport" content="height=device-height, target-densitydpi=device-dpi, user-scalable=no">');
-		$("head").append('<meta name="viewport" content="width=960, target-densitydpi=device-dpi">');
+		//$("head").append('<meta name="viewport" content="width=960, target-densitydpi=device-dpi">');
 		$("#logosBlock").append('<div class="disblock posAbsolute alpha80hover patrocinador" id="logoBac"></div> <div class="disblock posAbsolute alpha80hover tran100 patrocinador" id="logoNacion"></div>');
 	}
 	else {
