--- a/juego_01.html
+++ b/juego_01.html
@@ -6,7 +6,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<meta name="viewport" content="width=960, target-densitydpi=device-dpi">
+<meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=0.8,">
 
 <meta name="author" content="David Herrera Cordero | Libros para Todos GN" />
 
@@ -345,7 +345,7 @@ $(document).ready(function() {
 		window.scrollTo(0, 0);//hide url bar mobiles //no funciona al 100% en android
 	}
 	else if (android > -1) {
-		alert('android 21');
+		//alert('android 21');
 		
 		if (window.devicePixelRatio == 1.5) {
 			alert("This is a high-density screen");
