--- a/juego_01.html
+++ b/juego_01.html
@@ -6,7 +6,8 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=0.8,">
+<!--<meta name="viewport" content="target-densitydpi=device-dpi, initial-scale=0.8,">-->
+<meta name="viewport" content="width=960px, target-densitydpi=device-dpi">
 
 <meta name="author" content="David Herrera Cordero | Libros para Todos GN" />
 
