--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 
 <!--<meta name="viewport" content="width=1400px, target-densitydpi=device-dpi">-->
-<meta name="viewport" content="width=device-width, user-scalable=no" />
+<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, user-scalable=no" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="author" content="David Herrera Cordero | Libros para Todos GN" />
@@ -57,9 +57,9 @@ var isDeskIE       = navigator.userAgent.toLowerCase().indexOf("IE");*/
 <script language="javascript" type="text/javascript">
 
 function auIntro() {
-	var audioElement = document.createElement('audio');
+	/*var audioElement = document.createElement('audio');
 	audioElement.setAttribute('autoplay', 'autoplay');
-	$.get();
+	$.get();*/
 	
 	//iOS y Safari no reconocen .ogg
 	if(isiPhone > -1) {
@@ -80,15 +80,22 @@ function auIntro() {
 		audioElement.setAttribute('src', 'audio/intro.mp3');
 	}
 	else if (android > -1) {
-		//alert('android 16');
+		alert('audio mp3');
+		var audioElement = document.createElement('audio');
+		audioElement.setAttribute('autoplay', 'autoplay');
+		$.get();
+		
 		audioElement.setAttribute('src', 'audio/intro.ogg');
+		//audioElement.setAttribute('src', 'audio/intro.mp3');
+		
+		audioElement.play();
 	}
 	else {
 		audioElement.setAttribute('src', 'audio/intro.ogg');
 	}
 	//fin iOS y Safari no reconocen .ogg
 	
-	audioElement.play();
+	//audioElement.play();
 }
 
 
