--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@ $(document).ready(function() {
 	var audioElement = document.createElement('audio');
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
-	audioElement.setAttribute('src', 'audio/intro.ogg');
+	//audioElement.setAttribute('src', 'audio/intro.ogg');
+	audioElement.setAttribute('src', 'audio/intro.mp3');
 	audioElement.play();
 	
 }); // fin document ready
