--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@ $(document).ready(function() {
 	nubesIn();
 	//auIntro();
 	
-	var audioElement = document.createElement('audio');
+	/*var audioElement = document.createElement('audio');
 	audioElement.setAttribute('autoplay', 'autoplay');
 	$.get();
 	//audioElement.setAttribute('src', 'audio/intro.ogg');
 	audioElement.setAttribute('src', 'audio/intro.mp3');
-	audioElement.play();
+	audioElement.play();*/
 	
 }); // fin document ready
 
@@ -353,11 +353,12 @@ $(document).ready(function() {
 </head>
 <body>
 
-<!--<audio id="myAudio" autoplay>
+<!---->
+<audio id="myAudio" autoplay>
 	<source src="audio/intro.ogg" type="audio/ogg">
 	<source src="audio/intro.mp3" type="audio/mpeg">
 	Your browser does not support the audio tag.
-</audio>-->
+</audio>
 
 <div id="contenido">
 	
