--- a/index.html
+++ b/index.html
@@ -321,13 +321,16 @@ $(document).ready(function() {
 	nubesIn();
 	//auIntro();
 	
-	audioElement.setAttribute('src', '/android_asset/www/audio/intro.ogg');
+	//audioElement.setAttribute('src', '/android_asset/www/audio/intro.ogg');
+	audioElement.setAttribute('src', '/assets/www/audio/intro.mp3');
 	audioElement.play();
-	alert('android 23');
+	alert('android 24');
 	
 }); // fin document ready
 
 </script>
+
+<script src="phonegap.js"></script>
 
 
 </head>
