--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@ $(document).ready(function() {
 	nubesIn();
 	//auIntro();
 	
-	//audioElement.setAttribute('src', '/android_asset/www/audio/intro.ogg');
-	audioElement.setAttribute('src', '/assets/www/audio/intro.mp3');
+	audioElement.setAttribute('src', '/assets/www/audio/intro.ogg');
+	//audioElement.setAttribute('src', '/assets/www/audio/intro.mp3');
 	audioElement.play();
-	alert('android 24');
+	alert('android 25');
 	
 }); // fin document ready
 
