--- a/index.html
+++ b/index.html
@@ -321,10 +321,11 @@ $(document).ready(function() {
 	nubesIn();
 	//auIntro();
 	
-	audioElement.setAttribute('src', '/assets/www/audio/intro.ogg');
+	//audioElement.setAttribute('src', '/assets/www/audio/intro.ogg');
 	//audioElement.setAttribute('src', '/assets/www/audio/intro.mp3');
+	audioElement.setAttribute('src', 'assets/www/audio/intro.ogg');
 	audioElement.play();
-	alert('android 25');
+	alert('android 26');
 	
 }); // fin document ready
 
