--- a/index.html
+++ b/index.html
@@ -323,9 +323,10 @@ $(document).ready(function() {
 	
 	//audioElement.setAttribute('src', '/assets/www/audio/intro.ogg');
 	//audioElement.setAttribute('src', '/assets/www/audio/intro.mp3');
-	audioElement.setAttribute('src', 'assets/www/audio/intro.ogg');
+	//audioElement.setAttribute('src', 'assets/www/audio/intro.ogg');
+	audioElement.setAttribute('src', 'file:///assets/www/audio/intro.ogg');
 	audioElement.play();
-	alert('android 26');
+	alert('android 27');
 	
 }); // fin document ready
 
