--- a/index.html
+++ b/index.html
@@ -323,10 +323,11 @@ $(document).ready(function() {
 	
 	//audioElement.setAttribute('src', '/assets/www/audio/intro.ogg');
 	//audioElement.setAttribute('src', '/assets/www/audio/intro.mp3');
-	audioElement.setAttribute('src', 'assets/www/audio/intro.ogg');
+	//audioElement.setAttribute('src', 'assets/www/audio/intro.ogg');
 	//audioElement.setAttribute('src', 'file:///assets/www/audio/intro.ogg');
+	audioElement.setAttribute('src', 'audio/intro.ogg');
 	audioElement.play();
-	alert('android 30');
+	alert('android 31');
 	
 }); // fin document ready
 
