--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <script>
         function playAudio(src) {
             if (device.platform == 'Android') {
-                src = '/android_assets/www/' + src;
+                //src = '/assets/www/' + src;
+				//src = '/android_assets/www/' + src;
+				src = 'assets/www/' + src;
             }
 
             var media = new Media(src, success, error_error);
