--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <h1>Playing Audio</h1>
-    <button onClick="playAudio('audio/intro.mp3')">Play</button>
+    <!--<button onClick="playAudio('audio/intro.mp3')">Play</button>-->
+    <button onClick="playAudio('audio/intro.ogg')">Play</button>
 
     <script src="phonegap.js"></script>
     <script>
